# A1App

./: .gitignore  DeploymentGuide.md  LICENCE  README.md  app.py  numbers.csv  pyproject.toml  requirements.txt
dlcnn_a1_dataset_generator/: __main__.py  app.py
dlcnn_a1_dataset_generator/templates/: index.html  index_old.html  log.html
templates/: index.html
