[tool.poetry]
name = "dlcnn_a1_dataset_generator"
version = "0.1.0"
description = "Deep Learning and Convolutional Neural Networks Assignment 1 Dataset Generator"
authors = ["Gitarth Vaishnav <Gitarth.Vaishnav@uts.edu.au>"]
license = "Propritery and Confidential"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
Flask-Cors = "^4.0.0"
gunicorn = "^21.2.0"
gdown = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
